# Func_System

./: CMakeLists.txt  LICENSE  README.md
base/: CMakeLists.txt
base/base_dataStruct/: simple_vector.ixx
base/base_pointer/: CMakeLists.txt  base_pointer.ixx  simple_pointer.ixx
base_dataStruct/: CMakeLists.txt  simple_vector.ixx  utilities.ixx
database/: CMakeLists.txt
database/func_dataBase/: CMakeLists.txt  func_dataBase.ixx
func/: CMakeLists.txt  base_func.ixx
meta/: CMakeLists.txt
meta/base_dataStruct/: CMakeLists.txt  simple_vector.ixx
meta/func_dataBase/: CMakeLists.txt  func_dataBase.ixx
meta/meta_data/: CMakeLists.txt  meta_funcData.ixx
meta/meta_func/: CMakeLists.txt  meta_func.ixx
meta_data/: CMakeLists.txt  meta_funcData.ixx
meta_func/: CMakeLists.txt  meta_func.ixx
src/: CMakeLists.txt  main.cpp  math_operations.ixx
